--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span>Solano Milan Diaz.</span>
+                    Hi, I'm <span>Henry Nguyen.</span>
                     A Web Developer.
                 </h1>
                 <p>
@@ -453,46 +453,44 @@
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-map-marker-alt"></i>
-                                    <span>Location</span>
+                                    <span>Location: </span>
                                 </div>
-                                <p>
-                                    : London, united Kingdom
-                                </p>
+                                <p>Hcm, VietNam</p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-envelope"></i>
-                                    <span>Email</span>
+                                    <span>Email: </span>
                                 </div>
                                 <p>
-                                    <span>: maclinzuniversal@gmail.com</span>
+                                    <span>henry.nguyen@gmail.com</span>
                                 </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-user-graduate"></i>
-                                    <span>Education</span>
+                                    <span>Education: </span>
                                 </div>
                                 <p>
-                                    <span>: Sussex University, East Sussex</span>
+                                    <span>FPT Education</span>
                                 </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-user-graduate"></i>
-                                    <span>Mobile Number</span>
+                                    <span>Mobile Number: </span>
                                 </div>
                                 <p>
-                                    <span>: 07522670617</span>
+                                    <span>0967667678</span>
                                 </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-globe-africa"></i>
-                                    <span>Languages</span>
+                                    <span>Languages: </span>
                                 </div>
                                 <p>
-                                    <span>: Afrikaans, English, Spanish</span>
+                                    <span>Vietnamese, English</span>
                                 </p>
                             </div>
                         </div>
