--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    
+    <meta name="description" content="Henry Web this is website just for fun" />
   </head>
   <body class="main-content">
     <header class="container header active" id="home">
